--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="cache-control" content="no-store" />
     <title>Case Converter</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
     <header>
