--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="cache-control" content="no-store" />
     <title>Case Converter</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/uqv2hus.css" />
 </head>
 <body>
     <header>
