--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Case Converter</h1>
+        <h1>Case C<span role="presentation">onvert</span>er</h1>
     </header>
     <main>
         <textarea placeholder="Enter text here"></textarea>
