add #converter text
Added a line of text under the textarea.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <header>
-        <h1>Case C<span role="presentation">onvert</span>er</h1>
+        <h1>Case <span role="presentation">Convert</span>er</h1>
     </header>
     <main>
         <textarea placeholder="Enter text here"></textarea>
+        <p id="converter">Convert text to</p>
     </main>
     <footer>
         <p id="copyright">&copy; 2021 Cassiopeia Neely. All Rights Reserved.</p>
