update #selection-placeholder span
Added the word "case" to the span.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter">Convert text to 
             <div id="selection-placeholder">
-                <span>select <i id="arrow"></i></span>
+                <span>select case <i id="arrow"></i></span>
                 <div id="dropdown">
                     <p class="options" id="lowercase">lowercase</p>
                     <p class="options" id="uppercase">UPPERCASE</p>
