--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Case Converter</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/uqv2hus.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -28,5 +29,6 @@
     <footer>
         <p id="copyright">&copy; 2021 Cassiopeia Neely. All Rights Reserved.</p>
     </footer>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
