update dropdown semantics
Decided to use button tags instead of paragraph tags.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div id="selection-placeholder">
                 <span>select case <i id="arrow"></i></span>
                 <div id="dropdown">
-                    <p class="options" id="lowercase">lowercase</p>
-                    <p class="options" id="uppercase">UPPERCASE</p>
+                    <button class="options" id="lowercase" type="button">lowercase</button>
+                    <button class="options" id="uppercase" type="button">UPPERCASE</button>
                 </div>
             </div>
         </span>
