--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter">Convert text to 
             <div id="selection-placeholder">
-                <span>select case <i id="arrow"></i></span>
+                <button id="case-selection">select case <i id="arrow"></i></button>
                 <div id="dropdown">
                     <button class="options" id="lowercase" type="button">lowercase</button>
                     <button class="options" id="uppercase" type="button">UPPERCASE</button>
