add #case-selection span
Added an unnamed span inside the #case-selection button, so the text can be updated with JS, and #arrow will remain in the button.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter">Convert text to 
             <div id="selection-placeholder">
-                <button id="case-selection">select case <i id="arrow"></i></button>
+                <button id="case-selection">
+                    <span>select case</span>
+                    <i id="arrow"></i>
+                </button>
                 <div id="dropdown">
                     <button class="options" id="lowercase" type="button">lowercase</button>
                     <button class="options" id="uppercase" type="button">UPPERCASE</button>
