--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </header>
     <main>
         <textarea placeholder="Enter text here"></textarea>
-        <span id="converter">Convert text to 
+        <span id="converter-wrapper">
+            <span id="converter-text">Convert text to </span> 
             <div id="selection-placeholder">
                 <button id="case-selection">
                     <span>select case</span>
