--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <div id="dropdown">
                     <button class="options" id="lowercase" type="button">lowercase</button>
                     <button class="options" id="uppercase" type="button">UPPERCASE</button>
+                    <button class="options" id="togglecase" type="button">tOgGleCaSe</button>
                 </div>
             </div>
         </span>
