update #case-selection button
Added the type attribute and set it to button.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span id="converter-wrapper">
             <span id="converter-text">Convert text to </span> 
             <div id="selection-placeholder">
-                <button id="case-selection">
+                <button id="case-selection" type="button">
                     <span>select case</span>
                     <i id="arrow"></i>
                 </button>
