add #icon-wrapper and #clipboard
Created a wrapper for an upcoming icon and added a temporary text button.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1>Case <span role="presentation">Convert</span>er</h1>
     </header>
     <main>
+        <div id="icon-wrapper">
+            <p id="clipboard">copy</p>
+        </div>
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter-wrapper">
             <span id="converter-text">Convert text to </span> 
