--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div id="icon-wrapper">
-            <p id="clipboard">copy</p>
+            <img id="clipboard" src="images/clipboard-icon.svg" alt="Copy text to clipboard icon" />
         </div>
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter-wrapper">
