--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div id="icon-wrapper">
-            <img id="clipboard" src="images/clipboard-icon.svg" alt="Copy text to clipboard icon" />
+            <img id="clipboard" src="images/clipboard-icon.svg" alt="Copy text to clipboard icon" title="Copy to clipboard" />
         </div>
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter-wrapper">
