--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
             </div>
         </span>
+        <img id="airplane" src="images/paper-airplane.svg" alt="" />
     </main>
     <footer>
         <p id="copyright">&copy; 2021 Cassiopeia Neely. All Rights Reserved.</p>
