--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <header>
+        <section id="typewriter-container">
+            <img id="typewriter" src="images/royal-mint-typewriter.svg" alt="typewriter illustration" />
+        </section>
         <h1>Case <span role="presentation">Convert</span>er</h1>
     </header>
     <main>
