--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
     <main>
         <div id="icon-wrapper">
-            <img id="clipboard" src="images/clipboard-icon.svg" alt="Copy text to clipboard icon" title="Copy to clipboard" />
+            <div id="clipboard">
+                <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
+            </div>
         </div>
         <textarea placeholder="Enter text here"></textarea>
         <span id="converter-wrapper">
