--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 </div>
             </div>
         </span>
-        <img id="airplane" src="images/paper-airplane.svg" alt="" />
+        <div id="airplane-container">
+            <img id="airplane" src="images/paper-airplane.svg" alt="" />
+        </div>
     </main>
     <footer>
         <p id="copyright">&copy; 2021 Cassiopeia Neely. All Rights Reserved.</p>
