--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <img id="incoming-airplane" src="images/incoming-airplane.svg" alt="" />
         <section id="typewriter-container">
             <img id="typewriter" src="images/royal-mint-typewriter.svg" alt="typewriter illustration" />
         </section>
