--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <body>
     <header>
         <img id="incoming-airplane" src="images/incoming-airplane.svg" alt="" />
-        <section id="typewriter-container">
-            <img id="typewriter" src="images/royal-mint-typewriter.svg" alt="typewriter illustration" />
-        </section>
-        <h1>Case <span role="presentation">Convert</span>er</h1>
+        <img id="typewriter-banner" src="images/mint-typewriter-with-banner.svg" alt="Typewriter and banner" />
     </header>
     <main>
         <div id="icon-wrapper">
