create .icon class
Added the class .icon to #clipboard and the new #retoggle button.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </header>
     <main>
         <div id="icon-wrapper">
-            <div id="clipboard">
+            <div class="icon" id="retoggle">
+                <img src="images/retoggle-icon.svg" alt="Aa icon" title="Retoggle" />
+            </div>
+            <div class="icon" id="clipboard">
                 <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
             </div>
         </div>
