update togglecase button
Just noticed a mistake in the way I toggled tOgGlEcAsE.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div id="dropdown">
                     <button class="options" id="lowercase" type="button">lowercase</button>
                     <button class="options" id="uppercase" type="button">UPPERCASE</button>
-                    <button class="options" id="togglecase" type="button">tOgGleCaSe</button>
+                    <button class="options" id="togglecase" type="button">tOgGlEcAsE</button>
                 </div>
             </div>
         </span>
