--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="cache-control" content="no-store" />
+    <meta name="keywords" content="togglecase, all caps, lowercase, converter" />
     <title>Case Converter</title>
     <link rel="icon" type="image/png" href="images/typewriter-favicon.png" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
