--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <img id="typewriter-banner" src="images/mint-typewriter-with-banner.svg" alt="Typewriter and banner" />
     </header>
     <main>
+        <div id="clipboard-wrapper">
+            <div id="clipboard-notice">
+                <p id="clipboard-confirmation">Copied to clipboard!</p>
+            </div>
+        </div>
         <div id="icon-wrapper">
             <div class="icon" id="retoggle">
                 <img src="images/retoggle-icon.svg" alt="Aa icon" title="Retoggle" />
