--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <div id="dropdown">
                     <button class="options" id="lowercase" type="button">lowercase</button>
                     <button class="options" id="uppercase" type="button">UPPERCASE</button>
+                    <button class="options" id="title-case" type="button">Title Case</button>
                     <button class="options" id="togglecase" type="button">tOgGlEcAsE</button>
                 </div>
             </div>
