create div #mobile-focus
Created a container to focus the input and dropdown area, when the button #case-selection is clicked. Otherwise, the dropdown extends beyond the bottom of the page.

--- a/index.html
+++ b/index.html
@@ -18,37 +18,39 @@
         <img id="typewriter-banner" src="images/mint-typewriter-with-banner.svg" alt="Typewriter and banner" />
     </header>
     <main>
-        <div id="clipboard-wrapper">
-            <div id="clipboard-notice">
-                <p id="clipboard-confirmation">Copied to clipboard!</p>
-            </div>
-        </div>
-        <div id="icon-wrapper">
-            <div class="icon" id="retoggle">
-                <img src="images/retoggle-icon.svg" alt="Aa icon" title="Retoggle" />
-            </div>
-            <div class="icon" id="clipboard">
-                <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
-            </div>
-        </div>
-        <textarea placeholder="Enter text here"></textarea>
-        <span id="converter-wrapper">
-            <span id="converter-text">Convert text to </span> 
-            <div id="selection-placeholder">
-                <button id="case-selection" type="button">
-                    <span>select case</span>
-                    <i id="arrow"></i>
-                </button>
-                <div id="dropdown">
-                    <button class="options" id="lowercase" type="button">lowercase</button>
-                    <button class="options" id="uppercase" type="button">UPPERCASE</button>
-                    <button class="options" id="title-case" type="button">Title Case</button>
-                    <button class="options" id="togglecase" type="button">tOgGlEcAsE</button>
+        <div id="mobile-focus">
+            <div id="clipboard-wrapper">
+                <div id="clipboard-notice">
+                    <p id="clipboard-confirmation">Copied to clipboard!</p>
                 </div>
             </div>
-        </span>
-        <div id="airplane-container">
-            <img id="airplane" src="images/paper-airplane.svg" alt="" />
+            <div id="icon-wrapper">
+                <div class="icon" id="retoggle">
+                    <img src="images/retoggle-icon.svg" alt="Aa icon" title="Retoggle" />
+                </div>
+                <div class="icon" id="clipboard">
+                    <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
+                </div>
+            </div>
+            <textarea placeholder="Enter text here"></textarea>
+            <span id="converter-wrapper">
+                <span id="converter-text">Convert text to </span> 
+                <div id="selection-placeholder">
+                    <button id="case-selection" type="button">
+                        <span>select case</span>
+                        <i id="arrow"></i>
+                    </button>
+                    <div id="dropdown">
+                        <button class="options" id="lowercase" type="button">lowercase</button>
+                        <button class="options" id="uppercase" type="button">UPPERCASE</button>
+                        <button class="options" id="title-case" type="button">Title Case</button>
+                        <button class="options" id="togglecase" type="button">tOgGlEcAsE</button>
+                    </div>
+                </div>
+            </span>
+            <div id="airplane-container">
+                <img id="airplane" src="images/paper-airplane.svg" alt="" />
+            </div>
         </div>
     </main>
     <footer>
