create #nota-bene icon
Added the new Post-it icon between the retoggle and clipboard icons.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <div class="icon" id="retoggle">
                     <img src="images/retoggle-icon.svg" alt="Aa icon" title="Retoggle" />
                 </div>
+                <div class="icon" id="nota-bene">
+                    <img src="images/nb-icon.svg" alt="Post-it Note icon" title="Nota bene" />
+                </div>
                 <div class="icon" id="clipboard">
                     <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
                 </div>
