--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             </div>
         </div>
     </main>
+    <section class="modal">
+        <div class="popup">
+        </div>
+    </section>
     <footer>
         <p id="copyright">&copy; 2021 Cassiopeia Neely. All Rights Reserved.</p>
     </footer>
