--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <section class="modal">
         <div class="popup">
             <div id="title-case-note">
+                <p id="close-box">✕</p>
                 <p id="note-title">Nota bene</p>
                 <p id="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quaerat deserunt quis quia dolores cum obcaecati laboriosam natus tempore repudiandae, doloremque ducimus vitae fugit reiciendis ipsam, eum vel. Laborum, numquam?</p>
             </div>
