--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div id="title-case-note">
                 <button id="close-box" type="button">✕</button>
                 <p id="note-title">Nota bene</p>
-                <p id="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quaerat deserunt quis quia dolores cum obcaecati laboriosam natus tempore repudiandae, doloremque ducimus vitae fugit reiciendis ipsam, eum vel. Laborum, numquam?</p>
+                <p id="note-text">This generator capitalizes the first and last (i.e., bookend) words in a given string of text, along with all nouns, verbs, pronouns, adjectives, and adverbs. The text within the bookends is parsed for articles (e.g., <span class="ital">a</span>, <span class="ital">the</span>), conjunctions (e.g., <span class="ital">and</span>, <span class="ital">but</span>), and prepositions (e.g., <span class="ital">in</span>, <span class="ital">on</span>), which are then set lowercase.</p>
             </div>
         </div>
     </section>
