--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
                 <p id="note-title">Nota bene</p>
                 <div id="note-text-wrapper">
                     <p class="note-text">This generator capitalizes the first and last (i.e., bookend) words, along with most parts of speech. The text within the bookends is parsed for articles (e.g., <span class="ital">a</span>, <span class="ital">the</span>), conjunctions (e.g., <span class="ital">and</span>, <span class="ital">but</span>), and prepositions (e.g., <span class="ital">in</span>, <span class="ital">on</span>), which are then set lowercase. <span id="see-more">See More &xrarr;</span></p>
-                    <p class="note-text" id="expanded-note-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum placeat debitis, esse distinctio saepe quam harum consectetur vero amet. Laborum optio aperiam necessitatibus illo nam. Aperiam aliquid vitae illo autem.</p>
+                    <div id="expanded-note-text">
+                        <p class="note-subtitle">Notable Exceptions</p>
+                        <p class="note-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum placeat debitis, esse distinctio saepe quam harum consectetur vero amet. Laborum optio aperiam necessitatibus illo nam. Aperiam aliquid vitae illo autem.</p>
+                    </div>
                 </div>
             </div>
         </div>
