--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p class="note-text">This generator capitalizes the first and last (i.e., bookend) words, along with most parts of speech. The text within the bookends is parsed for articles (e.g., <span class="ital">a</span>, <span class="ital">the</span>), conjunctions (e.g., <span class="ital">and</span>, <span class="ital">but</span>), and prepositions (e.g., <span class="ital">in</span>, <span class="ital">on</span>), which are then set lowercase. <span id="see-more">See More &xrarr;</span></p>
                     <div id="expanded-note-text">
                         <p class="note-subtitle">Notable Exceptions</p>
-                        <p class="note-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum placeat debitis, esse distinctio saepe quam harum consectetur vero amet. Laborum optio aperiam necessitatibus illo nam. Aperiam aliquid vitae illo autem.</p>
+                        <p class="note-text">Phrasal verbs—idiomatic expressions that pair verbs with an adverb, a preposition, or a combination of both—should be capitalized in titles.</p>
                     </div>
                 </div>
             </div>
