--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     </div>
                 </div>
             </div>
+            <div id="chevron-wrapper">
+                <p id="chevron">&rang;</p>
+            </div>
         </div>
     </section>
     <footer>
