--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 </div>
             </div>
             <div id="chevron-wrapper">
-                <p id="chevron">&rang;</p>
+                <div id="chevron-bg">
+                    <img id="chevron" src="images/note-chevron.svg" alt="Chevron" />
+                </div>
             </div>
         </div>
     </section>
