--- a/index.html
+++ b/index.html
@@ -65,20 +65,21 @@
                     <p class="note-text">This generator capitalizes the first and last (i.e., bookend) words, along with most parts of speech. The text within the bookends is parsed for articles (e.g., <span class="ital">a</span>, <span class="ital">the</span>), conjunctions (e.g., <span class="ital">and</span>, <span class="ital">but</span>), and prepositions (e.g., <span class="ital">in</span>, <span class="ital">on</span>), which are then set lowercase. <span id="see-more">See More &xrarr;</span></p>
                     <div id="expanded-note-text">
                         <p class="note-subtitle">Notable Exceptions</p>
-                        <p class="note-text">Phrasal verbs—idiomatic expressions that pair verbs with an adverb, a preposition, or a combination of both—should be capitalized in titles. So, for example:</p>
+                        <p class="note-text">Phrasal verbs—idiomatic expressions that pair verbs with an adverb, a preposition, or a combination of both—should be capitalized in titles. So, in</p>
                         <table>
                             <tr>
                                 <td class="quote-color"></td>
-                                <td class="quote-text">How to Look Up a Word</td>
+                                <td class="quote-text">You Should Look Up Words You Don’t Know</td>
                             </tr>
                         </table>
-                        <p class="note-text">but</p>
+                        <p class="note-text"><span class="ital">look up</span> is capitalized, as it means “to research,” but in</p>
                         <table>
                             <tr>
                                 <td class="quote-color"></td>
-                                <td class="quote-text">She Ran up the Hill</td>
+                                <td class="quote-text">Look up at the Stars</td>
                             </tr>
                         </table>
+                        <p class="note-text"><span class="ital">up</span>, as a general direction, is set lowercase.</p>
                     </div>
                 </div>
             </div>
