note about h1 element
So, I initially decided against making this an h1, since it goes against best practice to hide an h1 element in a hidden popup. Especially since this heading isn't about the overarching project title. But, you can't really have an h2 without an h1, and the note was getting cluttered with paragraph tags, when more semantically appropriate tags exist.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="popup">
             <div id="title-case-note">
                 <button id="close-box" type="button">✕</button>
-                <p id="note-title">Nota bene</p>
+                <h1>Nota bene</h1>
                 <div id="note-text-wrapper">
                     <p class="note-text">This generator capitalizes the first and last (i.e., bookend) words, along with most parts of speech. The text within the bookends is parsed for articles (e.g., <span class="ital">a</span>, <span class="ital">the</span>), conjunctions (e.g., <span class="ital">and</span>, <span class="ital">but</span>), and prepositions (e.g., <span class="ital">in</span>, <span class="ital">on</span>), which are then set lowercase. <span id="see-more">See More &xrarr;</span></p>
                     <div id="expanded-note-text">
