--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div id="note-text-wrapper">
                     <p class="note-text">This generator capitalizes the first and last (i.e., bookend) words, along with most parts of speech. The text within the bookends is parsed for articles (e.g., <span class="ital">a</span>, <span class="ital">the</span>), conjunctions (e.g., <span class="ital">and</span>, <span class="ital">but</span>), and prepositions (e.g., <span class="ital">in</span>, <span class="ital">on</span>), which are then set lowercase. <span id="see-more">See More &xrarr;</span></p>
                     <div id="expanded-note-text">
-                        <p class="note-subtitle">Notable Exceptions</p>
+                        <h2>Notable Exceptions</h2>
                         <p class="note-text">Phrasal verbs—idiomatic expressions that pair verbs with an adverb, a preposition, or a combination of both—should be capitalized in titles. So, in</p>
                         <table>
                             <tr>
