--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                             </tr>
                         </table>
                         <p class="note-text"><span class="ital">up</span>, as a general direction, is set lowercase.</p>
+                        <p class="note-text">This generator automatically capitalizes twenty common phrasal verbs, but you’ll need to manually capitalize their variations. For example, <span class="ital">hold out</span> will be capitalized for you, but <span class="ital">holding out</span> won’t. See the full list, below.</p>
                     </div>
                 </div>
             </div>
