--- a/index.html
+++ b/index.html
@@ -81,6 +81,32 @@
                         </table>
                         <p class="note-text"><span class="ital">up</span>, as a general direction, is set lowercase.</p>
                         <p class="note-text">This generator automatically capitalizes twenty common phrasal verbs, but you’ll need to manually capitalize their variations. For example, <span class="ital">hold out</span> will be capitalized for you, but <span class="ital">holding out</span> won’t. See the full list, below.</p>
+                        <div id="phrases-container">
+                            <div>
+                                <p class="capitalized-phrase note-text">Ask for</p>
+                                <p class="capitalized-phrase note-text">Break up</p>
+                                <p class="capitalized-phrase note-text">Bring down</p>
+                                <p class="capitalized-phrase note-text">Carry on</p>
+                                <p class="capitalized-phrase note-text">Clean up</p>
+                                <p class="capitalized-phrase note-text">Come from</p>
+                                <p class="capitalized-phrase note-text">Fall apart</p>
+                                <p class="capitalized-phrase note-text">Find out</p>
+                                <p class="capitalized-phrase note-text">Get across</p>
+                                <p class="capitalized-phrase note-text">Hold off</p>
+                            </div>
+                            <div>
+                                <p class="capitalized-phrase note-text">Hold on</p>
+                                <p class="capitalized-phrase note-text">Hold out</p>
+                                <p class="capitalized-phrase note-text">Look up</p>
+                                <p class="capitalized-phrase note-text">Look down</p>
+                                <p class="capitalized-phrase note-text">Miss out</p>
+                                <p class="capitalized-phrase note-text">See to</p>
+                                <p class="capitalized-phrase note-text">Turn down</p>
+                                <p class="capitalized-phrase note-text">Turn up</p>
+                                <p class="capitalized-phrase note-text">Wake up</p>
+                                <p class="capitalized-phrase note-text">Work out</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
