update note with caveat
Added a reminder that the auto-capitalization might not always apply.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
                                 <p class="capitalized-phrase note-text">Work out</p>
                             </div>
                         </div>
+                        <p class="note-text">Take care to adjust any situations where these capitalizations don’t apply. Remember, there is a difference between the following examples:</p>
+                        <table>
+                            <tr>
+                                <td class="quote-color"></td>
+                                <td class="quote-text">Things Will Work Out, Eventually</td>
+                            </tr>
+                        </table>
+                        <table>
+                            <tr>
+                                <td class="quote-color"></td>
+                                <td class="quote-text">They Work out on the Docks</td>
+                            </tr>
+                        </table>
+                        <p class="note-text">You’ll get it!</p>
                     </div>
                 </div>
             </div>
