--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <p class="capitalized-phrase note-text">Fall apart</p>
                                 <p class="capitalized-phrase note-text">Find out</p>
                                 <p class="capitalized-phrase note-text">Get across</p>
-                                <p class="capitalized-phrase note-text">Hold off</p>
+                                <p class="capitalized-phrase note-text split">Hold off</p>
                             </div>
                             <div>
                                 <p class="capitalized-phrase note-text">Hold on</p>
