add iOS theme color meta tags
Added meta tags, to blend the Safari address and status bars with the page background.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="cache-control" content="no-store" />
     <meta name="keywords" content="togglecase, all caps, lowercase, converter" />
+    <meta name="theme-color" content="rgb(28, 33, 62)" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="rgb(28, 33, 62)" /> 
     <title>Case Converter</title>
     <link rel="icon" type="image/png" href="images/typewriter-favicon.png" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
