--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
                 </div>
             </div>
-            <textarea placeholder="Enter text here"></textarea>
+            <div id="textarea" contenteditable="plaintext-only" aria-placeholder="Enter text here"></div>
             <span id="converter-wrapper">
                 <span id="converter-text">Convert text to </span> 
                 <div id="selection-placeholder">
