revert back to textarea
Replaced the contenteditable div with the old textarea, since it doesn't seem to be causing the clipboard issue.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="images/clipboard-icon.svg" alt="Clipboard icon" title="Copy to clipboard" />
                 </div>
             </div>
-            <div class="textarea" contenteditable="plaintext-only" aria-placeholder="Enter text here"></div>
+            <textarea placeholder="Enter text here"></textarea>
             <span id="converter-wrapper">
                 <span id="converter-text">Convert text to </span> 
                 <div id="selection-placeholder">
