--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
     </section>
     <footer>
-        <p id="copyright">&copy; <span id="copyright-year"></span> Cassiopeia Neely. All Rights Reserved.</p>
+        <p id="copyright">&copy; 2021–<span id="copyright-year"></span> Cassiopeia Neely. All Rights Reserved.</p>
     </footer>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
